# CLASS-CODE

./: README.md
07July/code-2024-07-12/: bits.py
07July/code-2024-07-16/: Assessment.py  README.md  condition.py
07July/code-2024-07-17/: Assignment.py  README.md  texts.py
07July/code-2024-07-18/: README.md  texts.py
07July/code-2024-07-19/: README.md  python_date.py
07July/code-2024-07-23/: index.html  python_calender.py
07July/code-2024-07-24/: README.md  python_timezone.py
07July/code-2024-07-25/: python_collection.py
07July/code-2024-07-26/: README.md  tuple_set.py
07July/code-23-07-2024/: python_calender.py
08August/code-2024-08-13/: README.md  python_dictionary.py
08August/code-2024-08-14/: README.md  python_iterables.py
08August/code-2024-08-20/: README.md  python_collection.py
08August/code-2024-08-2024/: README.md  statement.py
08August/code-2024-08-21/: README.md  python_regex.py
08August/code-2024-08-22/: statement.py
08August/code-2024-08-23/: README.md  for_and_while.py
08August/code-2024-08-27/: README.md  python_funtion.py  try-except.py
11November/code-2024-11-21/base_dice_game/: LICENSE  pyproject.toml
11November/code-2024-11-21/base_dice_game/src/dice_game_sumaya/: dice.py  dice_board.py  dummy_dice_game.py  main.py
11November/code-2024-11-21/base_dice_game/src/dice_game_sumaya.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
11November/code-2024-11-21/base_dice_game/src/dice_game_sumaya/dice_game_abstracts/: dice_game.py  die.py
code-23-07-2024/: july_2024.txt  python_calender.py
(+106 files in other folders)
