[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dice_game_sumaya"
version = "1.0.2"
authors = [
   { name="Sumaya Hakeem", email="sumaiaislam7876@gmail.com" },
]
license = {file = "LICENSE"}
description = "A package to perform basic mathematical operation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Education",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
keywords = ["calculator", "math", "addition", "multiplication", "subtraction"]
# dependencies = ["package-name >= version",]
#dependencies = ["pytest == 2.3"]

#[project.optional-dependencies]
#dev = ["pytest", "isort"]

[project.urls]
#"Homepage": ""
#"documentation" = ""
#"source" = ""
#"download" = ""
#"tracker" = ""